# rust-way

./: .gitignore  Bartender.Dockerfile  Cargo.toml  Migrate.Dockerfile  README.md  Todo.Dockerfile  bartender.docker.config.yaml  docker-compose.yml  todo.docker.config.yaml  todo_tasks.json
.github/workflows/: rust.yml
alias/: Cargo.toml  pseudonym.json
alias/src/: etaoin.rs  lib.rs  pig_latin.rs  pseudonym.rs
bartender/: Cargo.toml  bartender.config.example.yaml
bartender/.sqlx/: query-49b5de90fe68236204b4e5388f52202b8cdd7a953aa903f15e18979592f923f7.json  query-6ddd2eb58460022aa3d1d4aa31a709916662c1f3435cf41f24f0894b731644e9.json
bartender/migrations/: 20250115163153_create_users_table.sql  20250115163217_create_refresh_tokens_table.sql  20250115163228_create_password_reset_table.sql
bartender/src/: app.rs  cli.rs  config.rs  main.rs
bartender/src/api/: bartender.rs  entities.rs  helpers.rs  mod.rs  payload.rs
bartender/src/api/bartender/: login.rs  mod.rs  refresh.rs  register.rs  validate.rs
bartender/src/entities/: access_tokens.rs  error_response.rs  mod.rs  user.rs
bartender/src/repository/: auth.rs
db_init/: create_databases.sql
domain/models/: Cargo.toml
domain/models/src/: user.rs
domain/repository/: Cargo.toml
domain/repository/.sqlx/: query-1b7580d4870e1d43d80297bff6a45a7d9e2dc32da6fdd1fa5c23576ce46cdeb0.json
middlewares/auth/: Cargo.toml
middlewares/auth/src/: claims.rs  extractor.rs  jwt.rs  lib.rs  tokens.rs
todo/: Cargo.toml  docker-compose.example.yml  example.env  todo.config.example.yaml
todo-cli/: Cargo.toml
todo-cli/src/: cli.rs  main.rs  storage.rs
todo/.sqlx/: query-2f4086eab47b13298a107ed8c0feaadab903468b8e4fbd39e465f581c7189272.json  query-69a02d6bc5b331f8d8d3d0b1668c5a83efc450ee68eda7d018a9683c212f0817.json  query-6a03d786ad2a19e0387aec4c58784cc321adf020dd47ef59b0d4505df30f3cd1.json  query-850d0af4351b195c6a3bf7b3eb76d870d2b3edd061526e2218b758568bb59e46.json  query-9a027ce7347646346d41e1a18d90980d0d37ff42bad9aa7a979555037fb85698.json
todo/migrations/: 20250108104926_create_tasks_table.sql
todo/src/: app.rs  cli.rs  config.rs  main.rs  models.rs
todo/src/api/: mod.rs  task.rs
todo/src/models/: task.rs
todo/src/repository/: task.rs
try-kafka/: Cargo.toml  docker-compose.yml
try-kafka/src/: kafka.rs  main.rs
(+2 files in other folders)
