[workspace]
resolver = "2"

members = [
    "middlewares/auth",
    "bartender",
    "domain/models",
    "todo",
    "todo-cli",
    "domain/repository",
]

[workspace.dependencies]
auth = { path = "middlewares/auth" }
models = { path = "domain/models" }
repository = { path = "domain/repository" }
