[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
auth = { workspace = true }
multitool-hg = { version = "0.1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
anyhow = "1"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8.1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.2", features = ["axum"] }
log = "0.4"
